Update IP | KhanhNguyen9872

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-nso adm:0.tcp.ap.ngrok.io:11802:0:0
+nso adm:0.tcp.ap.ngrok.io:19297:0:0,nso adm-2:0.tcp.ap.ngrok.io:14832:0:0,Local:127.0.0.1:14444:0:0,KhanhNguyen9872:127.0.0.1:14444:0:1
