Update IP | KhanhNguyen9872

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-nso adm:0.tcp.ap.ngrok.io:11611:0:0,nso adm-2:0.tcp.ap.ngrok.io:11890:0:0,Local:127.0.0.1:14444:0:0,KhanhNguyen9872:127.0.0.1:14444:0:1
+NSO ADM:0.tcp.ap.ngrok.io:13800:0:0,NSO ADM-2:0.tcp.ap.ngrok.io:18889:0:0,Local:127.0.0.1:14444:0:0,KhanhNguyen9872:127.0.0.1:14444:0:1
