Update IP | KhanhNguyen9872

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-NSO ADM:0.tcp.ap.ngrok.io:16228:0:0,NSO ADM-2:0.tcp.ap.ngrok.io:11289:0:0,Local:127.0.0.1:14444:0:0,KhanhNguyen9872:127.0.0.1:14444:0:1
+nso adm:0.tcp.ap.ngrok.io:13400:0:0,Local:127.0.0.1:14444:0:0,KhanhNguyen9872:127.0.0.1:14444:0:1
